--- a/README
+++ b/README
@@ -9,3 +9,5 @@
 это методом подбора).
 Массивы, хранящие популяции и значения функции, являются двумерными. По сути, каждый из них представляет собой "таблицу" в 1000 строк и 3 столбца.
 В конце программы из каждого столбца выводится лучшее значение функции, на основании которых мы в последствии выбираем самое маленькое значение функции.
+Примечание: по сути было сгенерировано 3 популяции по 1000 элементов в каждой, но для простоты восприятия в коде я оформил это как 1000 популяций по 3 элемента.
+Это является исключительно визуальным (?) решением.
